@@ -180,9 +180,14 @@ dnl
 dnl options and defaults
 dnl
 
-AM_PATH_LIBPRELUDE([0.9.0])
-if test "$LIBPRELUDE_CONFIG" != "no" ; then
-  LIBPRELUDE_CFLAGS="$LIBPRELUDE_CFLAGS -DPRELUDE=1"
+AC_ARG_ENABLE([prelude],
+	AC_HELP_STRING([--disable-prelude],[do not use prelude]),
+	WITH_PRELUDE=$enableval, WITH_PRELUDE=yes)
+if test "$WITH_PRELUDE" == "yes" ; then
+  AM_PATH_LIBPRELUDE([0.9.0])
+  if test "$LIBPRELUDE_CONFIG" != "no" ; then
+    LIBPRELUDE_CFLAGS="$LIBPRELUDE_CFLAGS -DPRELUDE=1"
+  fi
 fi
 
 dnl lots of debugging information goes to /var/run/pam-debug.log
@@ -193,23 +198,6 @@ AC_ARG_ENABLE([debug],
 		[lots of stuff gets written to /var/run/pam-debug.log]),
 		WITH_DEBUG=no)
 AC_SUBST(WITH_DEBUG)
-
-AC_ARG_ENABLE([memory-debug],
-    AC_HELP_STRING([--enable-memory-debug],[specify you want every malloc etc. call tracked]),
-    WITH_MEMORY_DEBUG=$enableval, WITH_MEMORY_DEBUG=no)
-if test "$WITH_MEMORY_DEBUG" != "no" ; then
-    AC_DEFINE([MEMORY_DEBUG], 1, [Every malloc etc. call will be tracked])
-fi
-AH_VERBATIM([_MEMORY_DEBUG],
-[#ifdef MEMORY_DEBUG
-/*
- * this is basically a hack - we need to include a semiarbitrary
- * number of headers to ensure that we don't get silly prototype/macro
- */
-# include <string.h>
-# include <stdlib.h>
-# include <security/pam_malloc.h>
-#endif /* MEMORY_DEBUG */])
 
 AC_ARG_ENABLE(securedir,
 [  --enable-securedir=<path to location of PAMs> [default \$libdir/security]],
